--- a/Resources/Styles/app.less
+++ b/Resources/Styles/app.less
@@ -16,4 +16,4 @@
 
 
 
-h1 { padding: 0.5cm; width: 100%; background: black; color: white; }
+.toolBar { padding: 0.5cm; width: 100%; background: gray; color: black; }
