--- a/Resources/Styles/pages.css
+++ b/Resources/Styles/pages.css
@@ -8,6 +8,7 @@ body { background: silver; }
 .page > .content { width: 100%; height: 100%; background: rgb(245, 245, 245);
 	display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-between;
 	align-content: space-between;
+	overflow: hidden;
 }
 
 .content .imageContainer { display: inline-flex; background-position: center center;
