--- a/Resources/Views/imageView.html
+++ b/Resources/Views/imageView.html
@@ -8,12 +8,16 @@
 
 	<div class="page" data-pages="{{pages.length}}" data-ng-repeat="page in pages">
 		<div class="content layout{{page.numberOfLines}}line" data-images="{{page.images.length}}">
-			<figure data-ng-repeat="image in page.images" class="imageContainer horizontal" style="background-image: url('{{image.path}}')">
+			<figure data-ng-repeat="image in page.images" class="imageContainer {{image.properties.join(' ')}}" style="background-image: url('{{image.path}}')">
+				<div class="controls imageControls">
+					<select ng-model="image.properties" multiple ng-options="p for p in imagePropertiesAvailable"></select>
+				</div>
 				<figcaption contenteditable="true" ng-model="image.caption">{{image.caption}}</figcaption>
 			</figure>
 		</div>
 		<div class="controls pageControls">
 			<button class="button green" data-ng-click="addImage(page)">(+) Add Image</button>
+			<!--<input type="text" data-ng-change="addImage(page, this.attribute(value))" />-->
 			<select ng-model="page.numberOfLines" ng-options="l for l in linesPerPageAvailable"></select>
 		</div>
 	</div>
