add image property chooser

--- a/Resources/Styles/app.less
+++ b/Resources/Styles/app.less
@@ -36,3 +36,12 @@ figcaption:before {
 	vertical-align: middle;
 	padding: 0.1cm;
 }
+
+.imageControls {
+	display: inline-flex; background: rgba(255,255,255,0.5);
+	label, select { margin: 0.1cm; }
+	select { border: none; background: white;
+		option { padding: 0.05cm; }
+	}
+
+}
