--- a/Resources/Views/imageView.html
+++ b/Resources/Views/imageView.html
@@ -4,30 +4,40 @@
 		<button class="button green" data-ng-click="save()">Save</button>
 		<input type="file" accept="application/json" name="loadFile" value="Open File"
 			   onchange="angular.element(this).scope().loadFile(this.files)" />
+		<input type="text" data-ng-model="photoBook.title" />
 	</div>
 
-	<div class="page" data-pages="{{pages.length}}" data-ng-repeat="page in pages">
-		<div class="content layout{{page.numberOfLines}}line" data-images="{{page.images.length}}">
-			<figure data-ng-repeat="image in page.images" class="imageContainer {{image.properties['display']}} {{image.properties['position']}}" style="background-image: url('{{image.path}}')">
-				<div class="controls imageControls">
-					<label>display:</label>
-					<select ng-model="image.properties['display']" ng-options="p for p in settings.displayAvailable"></select>
-					<label>position:</label>
-					<select ng-model="image.properties['position']" ng-options="p for p in settings.positionAvailable"></select>
-					<button class="button red" data-ng-click="page.removeImage(image)">X</button>
-				</div>
-				<figcaption contenteditable="true" ng-model="image.caption">{{image.caption}}</figcaption>
-			</figure>
+	<div class="pageFrame" data-ng-repeat="page in photoBook.pages">
+		<div class="page">
+			<div class="content layout{{page.numberOfLines}}line" data-images="{{page.images.length}}">
+				<figure data-ng-repeat="image in page.images" class="imageContainer {{image.properties['display']}} {{image.properties['position']}}" style="background-image: url('{{image.path}}')">
+					<div class="controls imageControls">
+						<label>display:</label>
+						<select ng-model="image.properties['display']" ng-options="p for p in settings.displayAvailable"></select>
+						<label>position:</label>
+						<select ng-model="image.properties['position']" ng-options="p for p in settings.positionAvailable"></select>
+						<button class="button blue" data-ng-click="page.moveImage(image,-1)">&uArr;</button>
+						<button class="button blue" data-ng-click="page.moveImage(image, 1)">&dArr;</button>
+						<button class="button red" data-ng-click="page.removeImage(image)">X</button>
+					</div>
+					<figcaption contenteditable="true" ng-model="image.caption">{{image.caption}}</figcaption>
+				</figure>
+			</div>
+			<div class="controls pageContentControls">
+				<button class="button green" data-ng-click="page.createImage()">+ New image</button>
+				<!--<input type="text" data-ng-change="addImage(page, this.attribute(value))" />-->
+				<select ng-model="page.numberOfLines" ng-options="l for l in settings.linesPerPageAvailable"></select>
+				<button class="button blue" data-ng-click="photoBook.movePage(page,-1)">&uArr;</button>
+				<button class="button blue" data-ng-click="photoBook.movePage(page, 1)">&dArr;</button>
+				<button class="button red" data-ng-click="photoBook.removePage(page)">X</button>
+			</div>
 		</div>
 		<div class="controls pageControls">
-			<button class="button green" data-ng-click="addImage(page)">+ Add image</button>
-			<!--<input type="text" data-ng-change="addImage(page, this.attribute(value))" />-->
-			<select ng-model="page.numberOfLines" ng-options="l for l in settings.linesPerPageAvailable"></select>
-			<button class="button red" data-ng-click="removePage(page)">X</button>
+			<button class="button green" data-ng-click="photoBook.createPage(2,$index+1)">+ New page</button>
 		</div>
 	</div>
 
 	<footer class="operationPanel">
-		<button class="button green" data-ng-click="addPage()">+ Add page</button>
+		<button class="button green" data-ng-if="photoBook.pages.length == 0" data-ng-click="photoBook.createPage(2,photoBook.pages.length)">+ New page</button>
 	</footer>
 </div>
