--- a/Resources/Styles/button.less
+++ b/Resources/Styles/button.less
@@ -1,8 +1,8 @@
 input[type="button"], .button, button, select {
-	display: inline-block; border-radius: 0.5em; color: black; font-weight: bold; padding: 0.25em 0.5em;
+	display: inline-block; border-radius: 0.25em; color: black; font-weight: bold; padding: 0.25em 0.5em;
 	.background-linear-gradient(white,silver); .box-shadow(0 0 0.5em gray); border: none;
 
-	span { display: inline; margin: 0; font-size: 1.2em; }
+	span.icon { display: inline; margin: 0; font-size: 1.2em; }
 
 	&:hover {
 		color: white;
