--- a/Resources/Styles/app.less
+++ b/Resources/Styles/app.less
@@ -5,7 +5,7 @@
 	.box-sizing(border-box);
 }
 
-body { padding-top: 2cm; }
+body { padding-top: 2cm; font-family: Ubuntu, Arial, Helvetica, sans-serif; }
 
 /* templates */
 .listElement {
@@ -33,12 +33,38 @@ figcaption:before { content: "✎"; color: white; margin-right: 0.25cm; font-wei
 
 	* { margin: 0 0.1cm; }
 
-	.controlsBlock {
-		display: flex; margin-bottom: 0.1cm;
-		.control { text-align: center; }
+	.control {
+		* { width: 1cm;
+			.label { display: none; }
+		}
 	}
 	.controlsBlock:last-child { margin-bottom: 0; }
 }
-
+.imageContainer.wide .imageControls *, .layout1line .imageContainer.horizontal .imageControls * {
+	width: auto;
+	.label { display: inline-block; }
+}
 
 .pageControls { padding: 0 0.5cm; }
+
+.titles { position: absolute;
+	.title { position: absolute;
+
+	}
+}
+
+
+
+.titleControls {
+	display: flex; flex-direction: row; justify-content: space-around; min-width: 14cm;
+	background: white; background: linear-gradient(white, silver); color: black;
+	padding: 0.25cm; box-shadow: 0 0 0.5cm black; border-radius: 0.1cm; opacity: 0.9;
+
+	/*&:before {
+		 width: 0; heigth: 0; border-style: solid; border-width: 0.25cm;
+		 border-color: transparent transparent white transparent; content: ""; display: block;
+		 position: relative; top: -1cm;
+	 }*/
+
+	> .control > * { max-width: 2cm; }
+}
